[gd_scene load_steps=30 format=3 uid="uid://bjwd7ftuqbq7h"]

[ext_resource type="Script" uid="uid://jm23nxjm3mw3" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://cy5mv5s0o7m53" path="res://player_lower.png" id="2_hqtel"]
[ext_resource type="Texture2D" uid="uid://cb2njjiskyk4r" path="res://player_sword.png" id="3_sweqy"]
[ext_resource type="Texture2D" uid="uid://bjdymyecxxuk3" path="res://player_upper.png" id="4_2hs0m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqk2v"]
size = Vector2(9, 16)

[sub_resource type="Animation" id="Animation_dw050"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteSword:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n7ghd"]
resource_name = "doubleJumpFlip"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteSword:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_1jxqw"]
resource_name = "idle"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteSword:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_nvl01"]
resource_name = "jump"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteSword:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_b26j0"]
resource_name = "run"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteSword:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "fall"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteSword:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "attak1"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteSword:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivps1"]
_data = {
&"RESET": SubResource("Animation_dw050"),
&"attak1": SubResource("Animation_sweqy"),
&"doubleJumpFlip": SubResource("Animation_n7ghd"),
&"fall": SubResource("Animation_hqtel"),
&"idle": SubResource("Animation_1jxqw"),
&"jump": SubResource("Animation_nvl01"),
&"run": SubResource("Animation_b26j0")
}

[sub_resource type="Animation" id="Animation_bwjto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pylmc"]
resource_name = "attack1"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25]
}

[sub_resource type="Animation" id="Animation_u1c27"]
resource_name = "doubleJumpFlip"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_q13i1"]
resource_name = "fall"
length = 0.25
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_urp6f"]
resource_name = "idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_op7ga"]
resource_name = "jump"
length = 0.5
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_606se"]
resource_name = "run"
length = 0.75
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pbfsw"]
_data = {
&"RESET": SubResource("Animation_bwjto"),
&"attack1": SubResource("Animation_pylmc"),
&"doubleJumpFlip": SubResource("Animation_u1c27"),
&"fall": SubResource("Animation_q13i1"),
&"idle": SubResource("Animation_urp6f"),
&"jump": SubResource("Animation_op7ga"),
&"run": SubResource("Animation_606se")
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "idle"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ivps1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pbfsw"]
resource_name = "run"
length = 0.75
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_5tmop"]
resource_name = "doubleJumpFlip"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_7ahtn"]
resource_name = "jump"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_7lmhl"]
resource_name = "fall"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_dx0e4"]
resource_name = "attack1"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jm5j8"]
_data = {
&"RESET": SubResource("Animation_ivps1"),
&"attack1": SubResource("Animation_dx0e4"),
&"doubleJumpFlip": SubResource("Animation_5tmop"),
&"fall": SubResource("Animation_7lmhl"),
&"idle": SubResource("Animation_2hs0m"),
&"jump": SubResource("Animation_7ahtn"),
&"run": SubResource("Animation_pbfsw")
}

[node name="Player" type="CharacterBody2D"]
z_index = 50
script = ExtResource("1_i3pqv")

[node name="Anchor" type="Node2D" parent="."]

[node name="SpriteLower" type="Sprite2D" parent="Anchor"]
position = Vector2(-16, 0)
texture = ExtResource("2_hqtel")
offset = Vector2(16, 0)
hframes = 26

[node name="SpriteSword" type="Sprite2D" parent="Anchor"]
visible = false
texture = ExtResource("3_sweqy")
hframes = 26

[node name="SpriteUpper" type="Sprite2D" parent="Anchor"]
visible = false
position = Vector2(-16, 0)
texture = ExtResource("4_2hs0m")
offset = Vector2(16, 0)
hframes = 26

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_aqk2v")

[node name="AnimationPlayerSword" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ivps1")
}

[node name="AnimationPlayerUpper" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pbfsw")
}

[node name="AnimationPlayerLower" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jm5j8")
}
